--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sketch 2 sketch landing page</title>
-
+    <link rel="stylesheet" href="style.css">
+    <!--Fonts link -->
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,300' rel='stylesheet' type='text/css'>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn t work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -23,13 +25,13 @@
         <div class="hero">
            
             <h1>
-                Convert Your sketches into
+                Convert Your sketches into<br>
                 Pixel Perfect Mockups
             </h1>
-            <h4>
+            <h2>
                 Get High-Fidelity Mockups Ready to
                 Send Out to Development.
-            </h4>
+            </h2>
             
             <div class="video-small">
                 <!---Add video--->
